--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,4 +18,5 @@
 
 <script src="app/router.js"></script>
 <script src="app/main.js"></script>
+<script src="app/service/globalService.js"></script>
 </html>
