--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="app/assets/css/style.css" />
 </head>
 <body ng-app="app" >
-<div class="container">
-    <div ng-view></div>
+<div class="container bc-image">
+	<div >
+		<a href="void(0)" class="logo"></a>
+	</div>
+	<div ng-view></div>
 </div>
 </body>
 <script src="app/assets/lib/angular.min.js"></script>
